--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,19 @@ dist
 
 # TernJS port file
 .tern-port
+
+# work files
+x
+xx
+xxx
+x.*
+y
+yy
+yyy
+y.*
+z
+zz
+zzz
+z.*
+*.20[0-9[0-9][01][0-9][0123][0-9][a-z]*
+*_20[0-9[0-9][01][0-9][0123][0-9][a-z]*
