--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ zzz
 z.*
 *.20[0-9[0-9][01][0-9][0123][0-9][a-z]*
 *_20[0-9[0-9][01][0-9][0123][0-9][a-z]*
+
+# application cache file
+cache.json
